05/10/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added Swedish translation thanks to Patrik Johansson
    * Some more buttons and menu's use Messages now

05/08/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Made the recent files menu use the EnhancedMenu class.
    * The BufferHistory now uses the canonical name of the file to store it's
      location.
    * Implemented the removeAll method in the EnhancedMenu class

05/07/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused NullPointerExceptions when renaming Processing
      Instruction nodes.
    * Updated Messages to allow you to specify a directory to load from.
    * Updated the build script to handle the messages file.

05/06/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in CompletionInfo that caused NullPointerExceptions to be
      thrown.
    * Removed the hasSchema() method from XMLDocument because it was dumb
    * Fixed a bug in AdapterNode.getAttributeAt(); Added the
      getAttributeNameAt() method.
    * Fixed several namespace bugs in the getters and setters for attributes in
      AdapterNode

05/01/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in XMLDocument with the hasCompletionInfo method.
      Renamed it to hasSchema().
    * Added the EnhancedMenu class that handles wrapping of the menu for you.

04/29/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in XMLDocument that caused null pointer exceptions to be
      thrown when setting the format XML option and the validation option
      in the options at the same time.
    * Added support for adding entity reference nodes to the document.

04/28/2005  Ian Lewis <IanLewis@member.fsf.org>

    * getAllowedElements() in AdapterNode.java now sorts the elements
    * Updated the OptionsPanel interface to remove the redundant saveOptions()
      method
    * Added node types to AdapterNode

04/27/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added Trish to the About Dialog.