@@ -37,7 +37,7 @@
     <property name="main.class" value="net.sourceforge.jsxe.jsXe"/>
 		<property name="major.version" value="0"/>
 		<property name="minor.version" value="4"/>
-		<property name="beta.version" value="1"/>
+		<property name="beta.version" value="2"/>
     <property name="bugfix.version" value="0"/>
 		<property name="app.version" value="${major.version}.${minor.version} pre${beta.version}"/>
 		<property name="app_version" value="${major.version}_${minor.version}pre${beta.version}"/>
